12/httpserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: http-server
