12/istio-spec.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  gateways:
    - simple
  hosts:
    - http-server.dev
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: http-server-service.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: simple
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - http-server.dev
      port:
        name: http-server
        number: 80
        protocol: HTTP
